[package]
name = "podcast"
edition = "2018"
version = "0.14.0"
authors = ["Nathan Jaremko <njaremko@gmail.com>"]
description = "A command line podcast manager"
license = "GPL-3.0"
readme = "README.md"
keywords = ["audio", "cli", "podcast", "music"]
repository = "https://github.com/njaremko/podcast"
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "njaremko/podcast" }

[[bin]]
bench = false
path = "src/main.rs"
name = "podcast"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
dirs = "2.0"
failure = "0.1"
lazy_static = "1.4"
futures = "0.3.1"
rayon = "1.3"
regex = "1.3"
reqwest = { version = "0.10", features = ["default-tls", "json"] }
rss = {version = "1.8", features = ["from_url"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
percent-encoding = "2.1"
semver-parser = "0.9.0"
tokio = { version = "0.2", features = ["full"]}