[package]
name = "podcast"
edition = "2018"
version = "0.17.5"
authors = ["Nathan Jaremko <njaremko@gmail.com>"]
description = "A command line podcast manager"
license = "GPL-3.0"
readme = "README.md"
keywords = ["audio", "cli", "podcast", "music"]
repository = "https://github.com/njaremko/podcast"
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "njaremko/podcast" }

[[bin]]
bench = false
path = "src/main.rs"
name = "podcast"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
dirs = "3.0"
lazy_static = "1.4"
futures = "0.3"
regex = "1.3"
reqwest = { version = "0.10", features = ["json", "stream"] }
rss = {version = "1.9", features = ["from_url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
percent-encoding = "2.1"
semver-parser = "0.9.0"
podcast_search = "0.3"
indicatif = "0.15.0"
anyhow = "1.0"
bloom = "0.3"
smol = { version = "0.1", features = ["tokio02"] }
num_cpus = "1.13"
term_size = "0.3.2"